force-app/main/default/objects/sugati__Site__c/sugati__Site__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Site</label>
</CustomObject>