force-app/main/default/objects/sugati__Site__c/fields/sugati__Account_Default_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Account_Default_Record_Type__c</fullName>
    <inlineHelpText>Please provide the developer name of the record type which you want to set as default.</inlineHelpText>
    <label>Account Default Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>