force-app/main/default/objects/sugati__Site__c/fields/sugati__Active_Booking_Currencies__c.field-meta.xml
<CustomField>
    <fullName>sugati__Active_Booking_Currencies__c</fullName>
    <description>No longer required. Needs removing from the package.</description>
    <inlineHelpText>No longer required. Needs removing from the package.</inlineHelpText>
    <label>Active Booking Currencies</label>
    <type>TextArea</type>
</CustomField>