force-app/main/default/objects/sugati__Site__c/fields/sugati__Agency_is_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>sugati__Agency_is_End_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if, when dealing with an agent booking you are expecting the agency to make the payments for the booking. If you expect the travelling pax to pay for an agency booking and you will then pay the agency the commission earned then leave this setting unchecked.</description>
    <inlineHelpText>Check this box if, when dealing with an agent booking you are expecting the agency to make the payments for the booking.</inlineHelpText>
    <label>Agency is End Customer</label>
    <type>Checkbox</type>
</CustomField>