force-app/main/default/objects/sugati__Site__c/fields/sugati__Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Agency_Type__c</fullName>
    <inlineHelpText>Define Supplier Types which should appear as an agency in Holiday Enquiry page.</inlineHelpText>
    <label>Agency Type</label>
    <type>TextArea</type>
</CustomField>