force-app/main/default/objects/sugati__Site__c/fields/sugati__Agent_Commission_on_Cancellation_Charges__c.field-meta.xml
<CustomField>
    <fullName>sugati__Agent_Commission_on_Cancellation_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the agent will receive commission on cancellation charges.</description>
    <inlineHelpText>If checked, the agent will receive commission on cancellation charges.</inlineHelpText>
    <label>Agent Commission on Cancellation Charges</label>
    <type>Checkbox</type>
</CustomField>