force-app/main/default/objects/sugati__Site__c/fields/sugati__Allow_0_day_Duration__c.field-meta.xml
<CustomField>
    <fullName>sugati__Allow_0_day_Duration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow 0-day duration on opportunities (for example, if this opportunity is just for a day trip)</description>
    <inlineHelpText>Allow 0-day duration on opportunities (for example, if this opportunity is just for a day trip)</inlineHelpText>
    <label>Allow 0 Day Duration</label>
    <type>Checkbox</type>
</CustomField>