force-app/main/default/objects/sugati__Site__c/fields/sugati__Allow_non_lead_multi_family_in_HE__c.field-meta.xml
<CustomField>
    <fullName>sugati__Allow_non_lead_multi_family_in_HE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the system does not force a user to select one lead for each account/family selected in Holiday Enquiry.</description>
    <inlineHelpText>When checked, the system does not force a user to select one lead for each account/family selected in Holiday Enquiry.</inlineHelpText>
    <label>Allow non-lead multi-family in HE</label>
    <type>Checkbox</type>
</CustomField>