force-app/main/default/objects/sugati__Site__c/fields/sugati__Allow_Sell_Price_in_IB_Popup__c.field-meta.xml
<CustomField>
    <fullName>sugati__Allow_Sell_Price_in_IB_Popup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No longer required. Needs removing from the package. Naval to action. (28th March 2019)</description>
    <inlineHelpText>Display the Client PP Sell and Markup columns in the supplier cost row in IB Popup</inlineHelpText>
    <label>Allow Sell Price in IB Popup</label>
    <type>Checkbox</type>
</CustomField>