force-app/main/default/objects/sugati__Site__c/fields/sugati__Allow_updating_Itinerary_Images__c.field-meta.xml
<CustomField>
    <fullName>sugati__Allow_updating_Itinerary_Images__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you allow users to update the Supplier Booking Images ( which appears on the itinerary) even after supplier booking creation. If checked, the Supplier Booking Images will be reallocated by the system.</inlineHelpText>
    <label>Allow updating Itinerary Images</label>
    <type>Checkbox</type>
</CustomField>