force-app/main/default/objects/sugati__Site__c/fields/sugati__ATOL_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__ATOL_Company_Name__c</fullName>
    <label>ATOL Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>