force-app/main/default/objects/sugati__Site__c/fields/sugati__ATOL_Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>sugati__ATOL_Company_Phone__c</fullName>
    <label>ATOL Company Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>