force-app/main/default/objects/sugati__Site__c/fields/sugati__ATOL_Flight_Plus_Arranger_Email__c.field-meta.xml
<CustomField>
    <fullName>sugati__ATOL_Flight_Plus_Arranger_Email__c</fullName>
    <label>ATOL Flight Plus Arranger Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>