force-app/main/default/objects/sugati__Site__c/fields/sugati__Auto_Component_Creation__c.field-meta.xml
<CustomField>
    <fullName>sugati__Auto_Component_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This controls whether Int Flight, Transfer and Accommodation are displayed when a new Opp is created.</inlineHelpText>
    <label>Auto Component Creation</label>
    <type>Checkbox</type>
</CustomField>