force-app/main/default/objects/sugati__Site__c/fields/sugati__Auto_Populate_Accommodation_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__Auto_Populate_Accommodation_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto Populate Accommodation Description in IB Popup</description>
    <label>Auto Populate Accommodation Description</label>
    <type>Checkbox</type>
</CustomField>