force-app/main/default/objects/sugati__Site__c/fields/sugati__Auto_Populate_Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__Auto_Populate_Internal_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Populate Internal Notes</label>
    <type>Checkbox</type>
</CustomField>