force-app/main/default/objects/sugati__Site__c/fields/sugati__Booking_Default_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Booking_Default_Record_Type__c</fullName>
    <inlineHelpText>Please provide a value in this field if you want to set a default record type to the bookings created from Sugati.</inlineHelpText>
    <label>Booking Default Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>