force-app/main/default/objects/sugati__Site__c/fields/sugati__Booking_Stage_on_First_Component__c.field-meta.xml
<CustomField>
    <fullName>sugati__Booking_Stage_on_First_Component__c</fullName>
    <inlineHelpText>Updated opportunity state when the very first component/supplier booking gets added to the booking.</inlineHelpText>
    <label>Booking Stage on First Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>