force-app/main/default/objects/sugati__Site__c/fields/sugati__Bypass_revision_name_on_versioning__c.field-meta.xml
<CustomField>
    <fullName>sugati__Bypass_revision_name_on_versioning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the &quot;Revision - x&quot; label won&apos;t be added to the opportunity reference number when creating new versions.</description>
    <inlineHelpText>If checked, the &quot;Revision - x&quot; label won&apos;t be added to the opportunity reference number when creating new versions.</inlineHelpText>
    <label>Bypass revision name on versioning</label>
    <type>Checkbox</type>
</CustomField>