force-app/main/default/objects/sugati__Site__c/fields/sugati__Cancellable_Stages__c.field-meta.xml
<CustomField>
    <fullName>sugati__Cancellable_Stages__c</fullName>
    <inlineHelpText>comma-separated list of stage names</inlineHelpText>
    <label>Cancellable Stages</label>
    <type>TextArea</type>
</CustomField>