force-app/main/default/objects/sugati__Site__c/fields/sugati__Card_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>sugati__Card_Payment_Methods__c</fullName>
    <defaultValue>&quot;Credit Card - Visa,Credit Card - Amex,Credit Card - Mastercard&quot;</defaultValue>
    <description>The payment methods (from the &apos;Payment Method&apos; field on the Client Payment object) that are card payments (comma separated). This affects whether the &apos;Card Type&apos; field is required or not when making tour payments.</description>
    <inlineHelpText>The payment methods (from the &apos;Payment Method&apos; field on the Client Payment object) that are card payments (comma separated). This affects whether the &apos;Card Type&apos; field is required or not when making tour payments.</inlineHelpText>
    <label>Card Payment Methods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>