force-app/main/default/objects/sugati__Site__c/fields/sugati__Community_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__Community_Base_URL__c</fullName>
    <label>Community Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>