force-app/main/default/objects/sugati__Site__c/fields/sugati__Community_Prefix_for_Opportunity_Links__c.field-meta.xml
<CustomField>
    <fullName>sugati__Community_Prefix_for_Opportunity_Links__c</fullName>
    <label>Community Prefix for Opportunity Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>