force-app/main/default/objects/sugati__Site__c/fields/sugati__Content_Host_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__Content_Host_Name__c</fullName>
    <label>Content Host Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>