force-app/main/default/objects/sugati__Site__c/fields/sugati__Copy_Opportunity_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__Copy_Opportunity_Text__c</fullName>
    <inlineHelpText>This defines which text is appended for cloned opportunities for the same client.</inlineHelpText>
    <label>Copy Opportunity Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>