force-app/main/default/objects/sugati__Site__c/fields/sugati__Create_Supplier_Cost_Payment_for_Agent__c.field-meta.xml
<CustomField>
    <fullName>sugati__Create_Supplier_Cost_Payment_for_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, a supplier cost and payment record will be created for the agent on agency bookings.</description>
    <inlineHelpText>If checked, a supplier cost and payment record will be created for the agent on agency bookings.</inlineHelpText>
    <label>Create Supplier Cost &amp; Payment for Agent</label>
    <type>Checkbox</type>
</CustomField>