force-app/main/default/objects/sugati__Site__c/fields/sugati__Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>sugati__Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables console.log in the JS script on Sugati VF pages.</inlineHelpText>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>