force-app/main/default/objects/sugati__Site__c/fields/sugati__Default_Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Default_Booking_Type__c</fullName>
    <label>Default Booking Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>