force-app/main/default/objects/sugati__Site__c/fields/sugati__Disable_Margin_Check__c.field-meta.xml
<CustomField>
    <fullName>sugati__Disable_Margin_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a button goes through CheckMargin before showing Itinerary PDF, checking this will disable the check and go straight to the PDF.</description>
    <inlineHelpText>If a button goes through CheckMargin before showing Itinerary PDF, checking this will disable the check and go straight to the PDF.</inlineHelpText>
    <label>Disable Margin Check</label>
    <type>Checkbox</type>
</CustomField>