force-app/main/default/objects/sugati__Site__c/fields/sugati__Display_Cost_per_Client_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Cost_per_Client_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, when setting up costs for a new component for the first time in IB, rows for all client groups will be created.</description>
    <inlineHelpText>If checked, when setting up costs for a new component for the first time in IB, rows for all client groups will be created.</inlineHelpText>
    <label>Display Cost per Client Group</label>
    <type>Checkbox</type>
</CustomField>