force-app/main/default/objects/sugati__Site__c/fields/sugati__Do_Not_Auto_Select_Extras__c.field-meta.xml
<CustomField>
    <fullName>sugati__Do_Not_Auto_Select_Extras__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the user doesn&apos;t want to see extras which are matching the criteria auto-selected then this setting should be checked.</inlineHelpText>
    <label>Do Not Auto-Select Extras</label>
    <type>Checkbox</type>
</CustomField>