force-app/main/default/objects/sugati__Site__c/fields/sugati__Dont_auto_cc_client__c.field-meta.xml
<CustomField>
    <fullName>sugati__Dont_auto_cc_client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the group member(s) will not automatically be CC&apos;d on emails sent via the &apos;Send Email&apos; page</description>
    <inlineHelpText>If checked, the group member(s) will not automatically be CC&apos;d on emails sent via the &apos;Send Email&apos; page</inlineHelpText>
    <label>Don&apos;t auto-cc client</label>
    <type>Checkbox</type>
</CustomField>