force-app/main/default/objects/sugati__Site__c/fields/sugati__Enable_Classic_View__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable_Classic_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show the original (non-tabbed) IB popup button on Itinerary Builder.</description>
    <inlineHelpText>Show the original (non-tabbed) IB popup button on Itinerary Builder.</inlineHelpText>
    <label>Enable Classic View (IB Popup)</label>
    <type>Checkbox</type>
</CustomField>