force-app/main/default/objects/sugati__Site__c/fields/sugati__Enable_Client_Payment_Split__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable_Client_Payment_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This setting allows users to split a client payment amount among available client groups under the opportunity.</inlineHelpText>
    <label>Enable Client Payment Split</label>
    <type>Checkbox</type>
</CustomField>