force-app/main/default/objects/sugati__Site__c/fields/sugati__Enable_Errata_Tab__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable_Errata_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Errata Tab</label>
    <type>Checkbox</type>
</CustomField>