force-app/main/default/objects/sugati__Site__c/fields/sugati__Enable_Tabbed_View__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable_Tabbed_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show the new IB popup button in Itinerary Builder.</description>
    <inlineHelpText>Show the new IB popup button in Itinerary Builder.</inlineHelpText>
    <label>Enable Tabbed View (IB Popup)</label>
    <type>Checkbox</type>
</CustomField>