force-app/main/default/objects/sugati__Site__c/fields/sugati__Flight_Component_Names__c.field-meta.xml
<CustomField>
    <fullName>sugati__Flight_Component_Names__c</fullName>
    <defaultValue>&quot;Int Flight,Dom Flights,Light Aircraft,Private Jet,Sea Plane&quot;</defaultValue>
    <description>The supplier booking record type names that are flight components.</description>
    <inlineHelpText>The supplier booking record type names that are flight components - comma separated. 
Please type in all the Flight component names for From and To fields to work correctly on IB.</inlineHelpText>
    <label>Flight Component Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>