force-app/main/default/objects/sugati__Site__c/fields/sugati__Generate_Opportunity_Name_from_HE__c.field-meta.xml
<CustomField>
    <fullName>sugati__Generate_Opportunity_Name_from_HE__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Please check this box if Opportunity Name should be in Account - Country - From and To Date format for Opps created via HE page. Otherwise, uncheck.</inlineHelpText>
    <label>Generate Opportunity Name from HE</label>
    <type>Checkbox</type>
</CustomField>