force-app/main/default/objects/sugati__Site__c/fields/sugati__GoogleMapAPIKey__c.field-meta.xml
<CustomField>
    <fullName>sugati__GoogleMapAPIKey__c</fullName>
    <label>GoogleMapAPIKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>