force-app/main/default/objects/sugati__Site__c/fields/sugati__Group_Inclusions_and_Exclusions__c.field-meta.xml
<CustomField>
    <fullName>sugati__Group_Inclusions_and_Exclusions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you want to group inclusions and exclusions on the docs setting page?</description>
    <inlineHelpText>Do you want to group inclusions and exclusions on the docs setting page?</inlineHelpText>
    <label>Group Inclusions and Exclusions</label>
    <type>Checkbox</type>
</CustomField>