force-app/main/default/objects/sugati__Site__c/fields/sugati__Hide_Post_Booking_Supplier_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__Hide_Post_Booking_Supplier_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By enabling this, you will opt for hiding the &quot;Would you like to create/update the supplier payment for the adjusted price?&quot; checkbox on IB More popup.</inlineHelpText>
    <label>Hide Post Booking Supplier Payment</label>
    <type>Checkbox</type>
</CustomField>