force-app/main/default/objects/sugati__Site__c/fields/sugati__IB_Icons_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__IB_Icons_Resource_Name__c</fullName>
    <label>IB Icons Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>