force-app/main/default/objects/sugati__Site__c/fields/sugati__Invoice_Pages__c.field-meta.xml
<CustomField>
    <fullName>sugati__Invoice_Pages__c</fullName>
    <inlineHelpText>This is to display a list of all the VF pages for SaveasPDF dropdown box. All the VF pages (API names) must be listed with comma separated.</inlineHelpText>
    <label>Invoice Pages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>