force-app/main/default/objects/sugati__Site__c/fields/sugati__LastReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>sugati__LastReferenceNumber__c</fullName>
    <inlineHelpText>The system stores the last used Opp Number in this field.  Use this field to set the starting Opp Ref Number.</inlineHelpText>
    <label>LastReferenceNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>