force-app/main/default/objects/sugati__Site__c/fields/sugati__Linked_Service_Extra_Item_Image_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__Linked_Service_Extra_Item_Image_Name__c</fullName>
    <inlineHelpText>This is for LS tab on IB more pop up. To display image for each LS record, we can specify the keyword of the image of the relevant record. Such &quot;Small&quot;.</inlineHelpText>
    <label>Linked Service Extra Item Image Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>