force-app/main/default/objects/sugati__Site__c/fields/sugati__Lookup_Max_Results__c.field-meta.xml
<CustomField>
    <fullName>sugati__Lookup_Max_Results__c</fullName>
    <description>Sets the maximum number of records to retrieve in a sugati lookup call. If no number specified, default to 100.</description>
    <inlineHelpText>Sets the maximum number of records to retrieve in a sugati lookup call. If no number specified, default to 100.</inlineHelpText>
    <label>Lookup Max Results</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>