force-app/main/default/objects/sugati__Site__c/fields/sugati__Namespace__c.field-meta.xml
<CustomField>
    <fullName>sugati__Namespace__c</fullName>
    <description>We can retire in this field. On Andy. 28th March.</description>
    <label>Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>