force-app/main/default/objects/sugati__Site__c/fields/sugati__New_Page_for_IB__c.field-meta.xml
<CustomField>
    <fullName>sugati__New_Page_for_IB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Page for IB</label>
    <type>Checkbox</type>
</CustomField>