force-app/main/default/objects/sugati__Site__c/fields/sugati__PCA_Key__c.field-meta.xml
<CustomField>
    <fullName>sugati__PCA_Key__c</fullName>
    <inlineHelpText>This is for Postcode Anywhere function on HE page. Please populate PCA key in here.</inlineHelpText>
    <label>PCA Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>