force-app/main/default/objects/sugati__Site__c/fields/sugati__Person_Account_Enabled__c.field-meta.xml
<CustomField>
    <fullName>sugati__Person_Account_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should be ticked when person account is being used in the Holiday Enquiry page.</inlineHelpText>
    <label>Person Account Enabled</label>
    <type>Checkbox</type>
</CustomField>