force-app/main/default/objects/sugati__Site__c/fields/sugati__Pricing_Output_on_PDF_Report__c.field-meta.xml
<CustomField>
    <fullName>sugati__Pricing_Output_on_PDF_Report__c</fullName>
    <defaultValue>&quot;Per Person&quot;</defaultValue>
    <label>Pricing Output on PDF / Report</label>
    <length>20</length>
    <type>Text</type>
</CustomField>