force-app/main/default/objects/sugati__Site__c/fields/sugati__Prompt_for_no_comms_prefs_on_save_HE__c.field-meta.xml
<CustomField>
    <fullName>sugati__Prompt_for_no_comms_prefs_on_save_HE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, saving a holiday enquiry for a contact that has unknown communication preferences will ask you if you want to create communication preferences.</description>
    <inlineHelpText>If checked, saving a holiday enquiry for a contact that has unknown communication preferences will ask you if you want to create communication preferences.</inlineHelpText>
    <label>Prompt for no comms prefs on save HE</label>
    <type>Checkbox</type>
</CustomField>