force-app/main/default/objects/sugati__Site__c/fields/sugati__Reduce_Agent_Comm_with_Tours_Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__Reduce_Agent_Comm_with_Tours_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, agents will take a cut in commission if discounts are added to a tour booking.</description>
    <inlineHelpText>If checked, agents will take a cut in commission if discounts are added to a tour booking.</inlineHelpText>
    <label>Reduce Agent Comm. with Tours Discount</label>
    <type>Checkbox</type>
</CustomField>