force-app/main/default/objects/sugati__Site__c/fields/sugati__Reference_No_Initial__c.field-meta.xml
<CustomField>
    <fullName>sugati__Reference_No_Initial__c</fullName>
    <inlineHelpText>Puts a static value. Any value puts in here will put in as an initial for the cloned opportunities.</inlineHelpText>
    <label>Reference No Initial</label>
    <length>10</length>
    <type>Text</type>
</CustomField>