force-app/main/default/objects/sugati__Site__c/fields/sugati__Reference_No_Zeros__c.field-meta.xml
<CustomField>
    <fullName>sugati__Reference_No_Zeros__c</fullName>
    <description>This is being used on CopyOpp and on a OppTrigger.</description>
    <inlineHelpText>Puts a static value. Any value puts in here will put before Opp Ref No. For example, if we put 0000, and the ref is 123, the Opp Ref will be 0000123.</inlineHelpText>
    <label>Reference No Zeros</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>