force-app/main/default/objects/sugati__Site__c/fields/sugati__Reporting_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__Reporting_Currency__c</fullName>
    <inlineHelpText>If you don&apos;t want to use any other currency for reporting other than corporate currency then provide the currency in the ISO format, like INR for Indian Rupee, and USE for United State Dollar.</inlineHelpText>
    <label>Reporting Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>