force-app/main/default/objects/sugati__Site__c/fields/sugati__Reports_Record_Limit__c.field-meta.xml
<CustomField>
    <fullName>sugati__Reports_Record_Limit__c</fullName>
    <description>Not being used anywhere. Can be deleted. Thanks</description>
    <label>Reports Record Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>