force-app/main/default/objects/sugati__Site__c/fields/sugati__Rounding_Digits_On_Rate_Loading__c.field-meta.xml
<CustomField>
    <fullName>sugati__Rounding_Digits_On_Rate_Loading__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Controls the rounding digits on rate loading component and it&apos;s the calculation.</inlineHelpText>
    <label>Rounding Digits On Rate Loading</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>