force-app/main/default/objects/sugati__Site__c/fields/sugati__Rounding_Digits_On_Supplier_Cost_Line__c.field-meta.xml
<CustomField>
    <fullName>sugati__Rounding_Digits_On_Supplier_Cost_Line__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>Controls the number of digits after decimal point needs to be rounding up in supplier cost line item.</inlineHelpText>
    <label>Rounding Digits On Supplier Cost Line</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>