force-app/main/default/objects/sugati__Site__c/fields/sugati__Run_Trigger__c.field-meta.xml
<CustomField>
    <fullName>sugati__Run_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should never be set to Checked. Should only be used by developers. Should be turned off during data upload process.</inlineHelpText>
    <label>Run Trigger</label>
    <type>Checkbox</type>
</CustomField>