force-app/main/default/objects/sugati__Site__c/fields/sugati__Show_Age_Column_in_HE__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Age_Column_in_HE__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Display Age column in HE page.</inlineHelpText>
    <label>Show Age Column in HE</label>
    <type>Checkbox</type>
</CustomField>