force-app/main/default/objects/sugati__Site__c/fields/sugati__Show_Comms_Prefs_Opt_In_Reason__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Comms_Prefs_Opt_In_Reason__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This is to control whether Opt in reason be enforced or not.</inlineHelpText>
    <label>Show Comms Prefs Opt In Reason</label>
    <type>Checkbox</type>
</CustomField>