force-app/main/default/objects/sugati__Site__c/fields/sugati__Show_Communication_Preferences__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Communication_Preferences__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is to control whether the Comm Preferences icon should be displayed on HE.</inlineHelpText>
    <label>Show Communication Preferences</label>
    <type>Checkbox</type>
</CustomField>