force-app/main/default/objects/sugati__Site__c/fields/sugati__Show_Filter_On_HE_Account_Search__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Filter_On_HE_Account_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A filter option will be displayed on Account Search in HE.</inlineHelpText>
    <label>Show Filter On HE Account Search</label>
    <type>Checkbox</type>
</CustomField>