force-app/main/default/objects/sugati__Site__c/fields/sugati__Show_Hide_Chart__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Hide_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This setting shows/hides the chart on IB.</inlineHelpText>
    <label>Show/Hide Chart</label>
    <type>Checkbox</type>
</CustomField>