force-app/main/default/objects/sugati__Site__c/fields/sugati__Show_Multi_Family__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Multi_Family__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This is to indicate whether Multil Family/ Group feature be activated on HE page.</inlineHelpText>
    <label>Show Multi-Family</label>
    <type>Checkbox</type>
</CustomField>