force-app/main/default/objects/sugati__Site__c/fields/sugati__SiteURLCommunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__SiteURLCommunity__c</fullName>
    <inlineHelpText>This is used on saved as pdfs page. The function requires to look at the URL and the value should be the url of the admin user such as um3.salesforce.com/</inlineHelpText>
    <label>SiteURLCommunity</label>
    <type>Url</type>
</CustomField>