force-app/main/default/objects/sugati__Site__c/fields/sugati__Status_Visible_in_Client_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__Status_Visible_in_Client_Payment__c</fullName>
    <inlineHelpText>List of all client invoice status which will be used to show client invoice records in the client payment page. Each status should start with a new line. If a value is not provided in this field then the system will be using &apos;Committed&apos; status by default.</inlineHelpText>
    <label>Status Visible in Client Payment</label>
    <type>TextArea</type>
</CustomField>