force-app/main/default/objects/sugati__Site__c/fields/sugati__Stripe_Payment_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__Stripe_Payment_Page_URL__c</fullName>
    <label>Stripe Payment Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>