force-app/main/default/objects/sugati__Site__c/fields/sugati__Supplier_Cost_Line_Default_Margin_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Supplier_Cost_Line_Default_Margin_Type__c</fullName>
    <label>Supplier Cost Line Default Margin Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>