force-app/main/default/objects/sugati__Site__c/fields/sugati__Suppress_triggers_for_non_licensed_users__c.field-meta.xml
<CustomField>
    <fullName>sugati__Suppress_triggers_for_non_licensed_users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will suppress Sugati triggers for all internal users who do not have a Sugati license.</description>
    <inlineHelpText>Checking this box will suppress Sugati triggers for all internal users who do not have a Sugati license.</inlineHelpText>
    <label>Suppress triggers for non-licensed users</label>
    <type>Checkbox</type>
</CustomField>