force-app/main/default/objects/sugati__Site__c/fields/sugati__Update_Quote_Date_on_PDF_Save__c.field-meta.xml
<CustomField>
    <fullName>sugati__Update_Quote_Date_on_PDF_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By checking this will update the Quote Date when Itinerary PDF is saved.</inlineHelpText>
    <label>Update Quote Date on PDF Save?</label>
    <type>Checkbox</type>
</CustomField>