force-app/main/default/objects/sugati__Site__c/fields/sugati__Users_Without_Upsert_Access__c.field-meta.xml
<CustomField>
    <fullName>sugati__Users_Without_Upsert_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this setting is enabled then users won&apos;t be able to create/update Account, Contact records in HE and Tour Pages.</description>
    <label>Users Without Upsert Access</label>
    <type>Checkbox</type>
</CustomField>