force-app/main/default/objects/sugati__Site__c/fields/sugati__Widgety_AppId__c.field-meta.xml
<CustomField>
    <fullName>sugati__Widgety_AppId__c</fullName>
    <label>Widgety AppId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>