force-app/main/default/objects/sugati__Site__c/fields/sugati__Widgety_Token__c.field-meta.xml
<CustomField>
    <fullName>sugati__Widgety_Token__c</fullName>
    <label>Widgety Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>